arc: Fix missing notification on extended desktop

The notification is missing because old ArcCustomNotificationView
is removed from widget first before ViewHierarchyChanged, which
causes the bail out logic be skipped. The CL updates the bail out
condition so that the bail out logic runs for the case and did not
detach notification surface from the new ArcCustomNotificationView.

BUG=661801

Review-Url: https://codereview.chromium.org/2475543002
Cr-Commit-Position: refs/heads/master@{#429599}

Former-commit-id: 24290805c28dbf3da5220464d68befac854244ad